@@ -11,6 +11,8 @@
  */
 
 	include(BASE_PATH . '/lib/functions.php');
+	define('LIMIT_REGEXP', '/(.*)[\s]+(limit[\s]+[\d]+[\s]*[,|offset][\s]*[\d]+)$/i');
+	define('SORT_REGEXP', '/(.*)[\s]+(ORDER[\s]+BY[\s]+([a-zA-z0-9_]+|`.*`|\'.*\'|".*"))[\s]*(ASC|DESC)*$/i');
 
 	function showDBError() {
 		return __('Database connection failed to the server') . '. ' . __('Host') . ': ' . DB_HOST . ', ' . __('User') . ': ' . DB_USER;
@@ -124,7 +126,7 @@
 		$f = $db->getFieldInfo();
 
 		// see if all fields come from one table so we can allow editing
-		if (Session::get('select', 'has_limit') && count($f) > 0) {
+		if (Session::get('select', 'can_limit') && count($f) > 0) {
 			Session::set('select', 'unique_table', $f[0]->table);
 			for($i=1; $i<count($f);$i++) {
 				if ($f[$i]->table != Session::get('select', 'unique_table')) {	// bail out, more than one table data
@@ -137,7 +139,7 @@
 		//if (Session::get('select', 'unique_table') == "COLUMNS")
 		//	Session::del('select', 'unique_table');
 
-		$ed = Session::get('select', 'has_limit') && (Session::get('select', 'unique_table') == "" ? false : true);// && ($db->numRows() > 0);
+		$ed = Session::get('select', 'can_limit') && (Session::get('select', 'unique_table') == "" ? false : true);// && ($db->numRows() > 0);
 		// ------------ print header -----------
 		print "<tr id=\"fhead\">";
 		print "<th class=\"th tch\">#</th>";
@@ -199,7 +201,7 @@
 			}
 			print "</tr>\n";
 			$j++;
-			if (Session::get('select', 'has_limit') && $record_limit > 0 && $j >= $record_limit)
+			if (Session::get('select', 'can_limit') && $record_limit > 0 && $j >= $record_limit)
 				break;
 		}
 
@@ -213,7 +215,7 @@
 		print '<div id="title">'. $gridTitle . '</div>';
 
 		$message = '';
-		if (Session::get('select', 'has_limit')) { // can limit be applied to this type of query (e.g. show,explain)
+		if (Session::get('select', 'can_limit')) { // can limit be applied to this type of query (e.g. show,explain)
 			if (Session::get('select', 'limit')) {  // yes, and limit is applied to records by the application
 				$total_records = Session::get('select', 'count');
 				$total_pages = ceil($total_records / $record_limit);
@@ -391,20 +393,56 @@
 	}
 
 	function getQueryType($query) {
-		$type = array('result'=>FALSE,'has_limit'=>FALSE,'update'=>FALSE);
+		$type = array('result'=>FALSE,'can_limit'=>FALSE,'has_limit'=>FALSE,'update'=>FALSE);
 		$query = trim($query, " \n\t");
 		$query = strtolower(substr($query, 0, 7));  // work on only first few required characters of query
 		if(substr($query, 0, 6) == "select" || substr($query, 0, 4) == "desc"
 					|| substr($query, 0, 7) == "explain" || substr($query, 0, 4) == "show"
 					|| substr($query, 0, 4) == "help" ) {
 			$type['result'] = TRUE;
-			if (substr($query, 0, 6) == "select")
-				$type['has_limit'] = TRUE; // we don't want to limit results for other queries like 'show...'
+			if (substr($query, 0, 6) == "select") {
+				$type['can_limit'] = TRUE; // we don't want to limit results for other queries like 'show...'
+				preg_match(LIMIT_REGEXP, $query, $matches);
+				if (count($matches) == 3) {
+					$type['has_limit'] = true;
+				}
+			}
 		}
 		else
 			$type['update'] = TRUE;
 
 		return $type;
+	}
+
+	function sortQuery($query, $field) {
+		$query = trim($query);
+		$sort = '';
+		$sort_type = Session::get('select', 'sort');
+		if (!$sort_type)
+			$sort_type = 'ASC';
+		$limit = '';
+		// find and extract limit clause out of query (must be the last clause, otherwise sorting will not work)
+		preg_match(LIMIT_REGEXP, $query, $matches);
+		if (count($matches) == 3) {
+			$query = trim($matches[1]);
+			$limit = trim($matches[2]);
+		}
+		preg_match(SORT_REGEXP, $query, $matches);
+		if (count($matches) > 3) {
+			$query = trim($matches[1]);
+			// if sorting with same field, change sorting order
+			if ( trim($matches[3]) == $field )
+				$sort_type = $sort_type == 'ASC' ? 'DESC' : 'ASC';
+			else // reset to ascending order
+				$sort_type = 'ASC';
+		}
+
+		Session::set('select', 'sort', $sort_type);
+		$sort = 'ORDER BY ' . $field . ' ' . $sort_type;
+
+		$query .= ' ' . $sort . ' ' . $limit;
+
+		return $query;
 	}
 
 	function getCommandInfo($sql) {
